<resources>

    <!-- Global -->
    <string name="app_name">Android Starter</string>
    <string name="splash_txt_version_name">v%1$s</string>
    <string name="app_check_network">Check your network</string>
    <string name="app_leave_application_txt">Exit ?</string>
    <string name="app_leave_application_yes">Yes</string>
    <string name="app_leave_application_no">No</string>
    <string name="app_input_required">This field is required</string>
    <string name="app_input_email_invalid">Invalid email</string>
    <string name="app_input_password_invalid">Invalid password(6 characters minimum)</string>
    <string name="app_input_password_confirm_invalid">Passwords don\'t match</string>
    <string name="app_checkbox_terms_invalid">You must accept terms</string>

    <!-- LoginActivity -->
    <string name="title_activity_login">Login</string>
    <string name="login_txt_hello">Hello,</string>
    <string name="login_input_hint_email">Email</string>
    <string name="login_input_hint_password">Password</string>
    <string name="login_btn_login">Login</string>
    <string name="login_btn_login_later">Later</string>
    <string name="login_btn_login_google">Login</string>
    <string name="login_txt_forgot_password">Forgot password ?</string>
    <string name="login_txt_create_account">Create account</string>

    <!-- RegisterActivity -->
    <string name="title_activity_register">Register</string>
    <string name="register_input_lastname">Lastname</string>
    <string name="register_input_firstname">Firstname</string>
    <string name="register_input_email">Email</string>
    <string name="register_input_password">Password</string>
    <string name="register_checkbox_terms">I agree with terms</string>
    <string name="register_btn_submit">submit</string>
    <string name="register_txt_already_signup">I have an account</string>
    <string name="register_txt_terms">Terms</string>

    <!-- Navdrawer -->
    <string name="openDrawer">Navigation View</string>
    <string name="closeDrawer">Navigation View Closed</string>

    <!-- Menu drawer -->
    <string name="menu_header_username">Anonymous user</string>
    <string name="menu_header_email">You are not register</string>
    <string name="menu_account">Account</string>
    <string name="menu_main">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>

    <!-- SnackBar -->
    <string name="snackbar_not_connected">You must be connected</string>
    <string name="snackbar_ok">OK</string>

    <!-- AccountFragment -->
    <string name="account_menu_save">save</string>
    <string name="account_input_lastname_hint">lastname</string>
    <string name="account_input_firstname_hint">firstname</string>
    <string name="account_input_email_hint">email address</string>
    <string name="account_input_phone_hint">phone number</string>
    <string name="account_message_update_ok">account updated</string>
    <string name="account_message_delete_ok">account deleted</string>
    <string name="account_message_error">error %1$s, please contact us</string>
    <string name="account_message_failure">connection failed, please contact us</string>
    <string name="account_btn_logout">logout</string>
    <string name="account_menu_update_password">update my password</string>
    <string name="account_menu_delete_account">delete my account</string>
    <string name="account_dialog_title">Delete account</string>
    <string name="account_dialog_message">Do you really wish delete your account ?</string>
    <string name="account_dialog_positive">yes</string>
    <string name="account_dialog_negative">no</string>

    <!-- UpdatePasswordActivity -->
    <string name="title_activity_update_password">Update password</string>
    <string name="update_password_input_password">password</string>
    <string name="update_password_input_new_password">new password</string>
    <string name="update_password_input_new_password_confirm">confirm password</string>
    <string name="update_password_message_update_ok">password updated</string>
    <string name="update_password_message_update_wrong">wrong password</string>
    <string name="update_password_message_error">error %1$s, please contact us</string>
    <string name="update_password_message_failure">connection failed, please contact us</string>
    <string name="update_password_button_submit">submit</string>

</resources>
