<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.emmanuel.loisance.androidstarter.activity.LoginActivity"
    android:background="@color/ColorPrimaryDark">


    <TextView
        android:id="@+id/login_txt_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_txt_hello"
        android:textColor="@color/White"
        android:textSize="40sp"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linearLayoutForm"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/login_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/login_input_hint_email"
            android:textColorHint="@color/White"
            android:textColor="@color/White"
            android:theme="@style/EditTextLoginStyle" />

        <EditText
            android:id="@+id/login_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/login_input_hint_password"
            android:textColorHint="@color/White"
            android:textColor="@color/White"
            android:theme="@style/EditTextLoginStyle"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingRight="4dp"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <Button
                android:id="@+id/login_btn_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/login_btn_login"
                android:textColor="@color/White"
                android:background="@drawable/button_login" />

            <Button
                android:id="@+id/login_btn_anonymous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/login_btn_login_later"
                android:textColor="@color/White"
                android:background="@drawable/button_login" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/login_btn_signin_google"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/common_google_signin_btn_text_light"
                android:text="@string/login_btn_login_google" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLoader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutForm"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/login_loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="5dp" />

    </LinearLayout>


    <TextView
        android:id="@+id/login_txt_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:text="@string/login_txt_forgot_password"
        android:textColor="@color/White"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/login_txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:text="@string/login_txt_create_account"
        android:textColor="@color/White"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
