<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/account_input_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:hint="@string/account_input_lastname_hint"
                android:textColor="@color/ColorTextPrimary" />

            <EditText
                android:id="@+id/account_input_firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:hint="@string/account_input_firstname_hint"
                android:textColor="@color/ColorTextPrimary" />

        </LinearLayout>

        <EditText
            android:id="@+id/account_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:hint="@string/account_input_email_hint"
            android:textColor="@color/ColorTextPrimary"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/account_input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="phone"
            android:hint="@string/account_input_phone_hint"
            android:textColor="@color/ColorTextPrimary"
            android:layout_marginTop="15dp"/>

    </LinearLayout>


    <Button
        android:id="@+id/account_button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:background="@color/ColorAccent"
        android:textColor="@color/White"
        android:layout_gravity="center_horizontal|bottom"/>


</FrameLayout>