<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ColorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <ProgressBar
        android:id="@+id/progressBarUpdatePassword"
        style="?android:attr/progressBarStyleHorizontal"
        android:visibility="invisible"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"/>

    <LinearLayout
        android:id="@+id/linearLayoutAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBarAccount"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/update_password_input_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/update_password_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:hint="@string/update_password_input_password"
                android:textColor="@color/ColorTextPrimary"
                android:ems="10"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/update_password_input_new_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/update_password_input_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:hint="@string/update_password_input_new_password"
                android:textColor="@color/ColorTextPrimary"
                android:ems="10"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/update_password_input_new_password_confirm_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/update_password_input_new_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:hint="@string/update_password_input_new_password_confirm"
                android:textColor="@color/ColorTextPrimary"
                android:ems="10"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/update_password_button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_password_button_submit"
        android:background="@color/ColorAccent"
        android:textColor="@color/White"
        android:layout_gravity="end|bottom"/>

</android.support.design.widget.CoordinatorLayout>